--- a/Index.html
+++ b/Index.html
@@ -8,9 +8,8 @@
 </head>
 <body>
     <div class="container">
-        <div id="heart" class="heart" onclick="destroyHeart()">
-            ❤️
-        </div>
+        <h1 id="message">💖 Happy Valentine's Day! 💖</h1>
+        <button id="thanksBtn" onclick="destroyValentine()">Thanks</button>
     </div>
 
     <script src="script.js"></script>
